manifests/pod-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-busybox
spec:
  containers:
  - name: mycontainer
    image: busybox
    command: ["sleep", "3600"]
