manifests/pod-init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-init-container
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-container
    image: busybox
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
