manifests/pod-using-secret-as-file.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-using-secret-as-file
spec:
  containers:
  - name: mycontainer
    image: redis
    volumeMounts:
    - name: foo
      mountPath: "/etc/foo"
      readOnly: true
  volumes:
  - name: foo
    secret:
      secretName: secret-01
