manifests/pod-using-secret-as-variable.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-using-secret-as-variable
spec:
  containers:
  - name: mycontainer
    image: redis
